# beast

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  pyproject.toml
.github/workflows/: lint.yaml  publish.yaml  run-tests.yaml  tests.yaml
apps/: demo_graio.py
beast/: __init__.py  config.py  extraction.py  extraction_3d.py  inference.py  io.py  logging.py  losses.py  train.py  video.py
beast/api/: __init__.py  model.py
beast/cli/: __init__.py  formatting.py  main.py  types.py
beast/cli/commands/: __init__.py  extract.py  extract_3d.py  predict.py  train.py
beast/data/: __init__.py  augmentations.py  config_3d.py  datamodules.py  datasets.py  samplers.py  types.py  video.py
beast/geometry/: __init__.py  camera.py  icp.py  positional_encoding.py  rotations.py
beast/models/: __init__.py  base.py  combined.py  erayzer.py  perceptual.py  registry.py  resnets.py  vits.py
beast/models/beast3d/: __init__.py  beast3d_config.py  beast3d_model.py  beast3d_train.py
beast/models/beast_resnet/: __init__.py  beast_resnet_config.py  beast_resnet_model.py  beast_resnet_train.py
beast/models/beast_vit/: __init__.py  beast_vit_config.py  beast_vit_model.py  beast_vit_train.py
beast/models/erayzer/: __init__.py  erayzer_config.py  erayzer_model.py  erayzer_train.py  visualize.py
beast/nn/: __init__.py  dino.py  perceptual.py
beast/preprocess/: config_3d.py  extraction.py  extraction_3d.py
beast/preprocess/segment/: pipeline.py  sam3.py  utils.py
beast/rendering/: __init__.py  dino.py  gaussians_renderer.py  losses.py  renderer.py  transformer.py
configs/: resnet_ae.yaml  vit.yaml  vit_perceptual.yaml
configs/multiview/: beast3d.yaml  erayzer.yaml  extraction_pipeline.yaml
docs/: beast3d.md  developer_guide.md  extract_data_for_3d.md
scripts/buildbot/: README.md  build.sh  build_srun.sh
test_scripts/: run_besat_resume_perceptual.sh
tests/: conftest.py  test_config.py  test_extraction.py  test_inference.py  test_io.py  test_logging.py  test_losses.py  test_train.py  test_video.py
tests/api/: __init__.py  test_model.py
tests/cli/: test_formatting.py  test_main.py  test_types.py
tests/cli/commands/: test_extract.py  test_extract_3d.py  test_predict.py  test_train.py
tests/data/: conftest.py  test_augmentations.py  test_config_3d.py  test_datamodules.py  test_datasets.py  test_samplers.py  test_types.py  test_video_loader.py
tests/geometry/: test_camera.py  test_positional_encoding.py  test_rotations.py
tests/models/: test_base.py  test_erayzer.py  test_perceptual.py  test_registry.py  test_resnets.py  test_vits.py
tests/models/beast3d/: conftest.py  test_beast3d_model.py
tests/models/beast_resnet/: test_beast_resnet_model.py
tests/models/beast_vit/: test_beast_vit_model.py
tests/models/erayzer/: conftest.py  test_erayzer_model.py  test_visualize.py
tests/nn/: test_dino.py  test_perceptual.py  test_transformer.py
tests/preprocess/: conftest.py  test_config_3d.py  test_extraction.py  test_extraction_3d.py
tests/preprocess/segment/: conftest.py  test_pipeline.py  test_sam3.py  test_utils.py
tests/rendering/: test_gaussians_renderer.py
