[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "beast-backbones"
version = "1.4.0"  # Update the version according to your source
description = "Behavioral analysis via self-supervised pretraining of transformers"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Yanchen Wang" },
    { name = "Matt Whiteway" },
]

keywords = ["machine learning", "deep learning", "computer_vision"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "aniposelib (>=0.8.0)",
    "imaug",
    "jaxtyping",
    "lightning (~=2.5)",
    "numpy (>=2.0.0)",
    "opencv-python-headless",
    "pillow",
    "pydantic",
    "scikit-learn",
    "tensorboard",
    "toml",
    "torchvision",
    "tqdm",
    "transformers",
]

[project.urls]
repository = "https://github.com/paninski-lab/beast"
documentation = "https://github.com/paninski-lab/beast"


# project.dependencies are used for metadata when building the project, tool.poetry.dependencies is only used to enrich
# project.dependencies for locking
[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry]
packages = [{ include = "beast" }]

[tool.poetry.scripts]
beast = "beast.cli.main:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-html",
    "urllib3 (>=2.7.0)",  # harder requirement than "requests" to address security vulnerability
    "requests",
    "ruff",
]

[tool.ruff]
line-length = 99
exclude = [
    ".git",
    "__pycache__",
    "build",
    "configs",
    "dist",
    "docs",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports/variables)
    "I",   # isort
    "UP",  # pyupgrade (modernize syntax: Tuple->tuple, Union->|, etc.)
    "B",   # flake8-bugbear (real bugs: mutable defaults, broad excepts, etc.)
    # "N",   # pep8-naming
]
ignore = [
    "B006",  # mutable default arguments are used intentionally in some places
    "E203",  # whitespace before ':' conflicts with black-style slice formatting
    "F722",  # jaxtyping dim strings (e.g. "batch channels") are not Python expressions
    "F821",  # undefined names in __all__ are flagged incorrectly for re-exports
]

[tool.ruff.lint.isort]
known-first-party = ["beast"]

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
include = ["beast", "tests"]
exclude = ["build", "configs", "data", "dist", "docs", "docker", "scripts"]
# torch stubs don't re-export public functions at the top level (torch.tensor, torch.allclose, etc.)
reportPrivateImportUsage = "none"

[tool.coverage.run]
# store paths relative to the repo root so that codecov can match coverage
# data against source files in the github repo, regardless of where the tests
# are run on the build machine. omit non-source directories to keep the report
## focused on beast/ only.
relative_files = true
omit = [
    "data/*",
    "docs/*",
    "configs/*",
    "htmlcov/*",
    "scripts/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = "tests"
generate_report_on_test = "True"
markers = ["multigpu"]
